Fix code boxes/borders overlapping vertically

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -86,8 +86,8 @@ html * {
 }
 
 code {
-  padding-top: 1px;
-  padding-bottom: 1px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   padding-left: 2px;
   padding-right: 2px;
   margin: 0px;
